Closed Bug 1702382 Opened 4 years ago Closed 4 years ago

conformance/attribs/gl-vertexattribpointer.html failure: vertexAttribPointer should not accept GL_FIXED

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

Attachments

(1 file)

Our current code assumes that WebGL 2 allows FIXED, but it does not.

Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e1e56cad80ff Forbid FIXED in vertexAttribPointer. r=lsalzman
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: