Bug 1702382 - Forbid FIXED in vertexAttribPointer. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D110497